Physics plus Mana Tablet madness

--- a/config/enviromine/profiles/default/CustomProperties/ChromatiCraft.cfg
+++ b/config/enviromine/profiles/default/CustomProperties/ChromatiCraft.cfg
@@ -124,6 +124,141 @@ blocks {
         B:"12.Slides When Wet"=false
     }
 
+    tile_block_crystalrune_chromaticraft_block_rune {
+        S:01.Name=ChromatiCraft:chromaticraft_block_rune
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_chroma_relay_chromaticraft_block_relay {
+        S:01.Name=ChromatiCraft:chromaticraft_block_relay
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_chroma_shield_chromaticraft_block_structshield {
+        S:01.Name=ChromatiCraft:chromaticraft_block_structshield
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_chroma_path_chromaticraft_block_path {
+        S:01.Name=ChromatiCraft:chromaticraft_block_path
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=strong
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_chroma_lampblock_chromaticraft_block_lampblock {
+        S:01.Name=ChromatiCraft:chromaticraft_block_lampblock
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=glowstone
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_crystal_fencerelay_chromaticraft_block_fence {
+        S:01.Name=ChromatiCraft:chromaticraft_block_fence
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=average
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_crystal_tank_chromaticraft_block_tank {
+        S:01.Name=ChromatiCraft:chromaticraft_block_tank
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_block_pylon_chromaticraft_block_pylonstruct {
+        S:01.Name=ChromatiCraft:chromaticraft_block_pylonstruct
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=strong
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    item_chroma_placer_chromaticraft_item_placer {
+        S:01.Name=ChromatiCraft:chromaticraft_item_placer
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
 }
 
 
