--- a/config/enviromine/profiles/default/CustomProperties/EnderIO.cfg
+++ b/config/enviromine/profiles/default/CustomProperties/EnderIO.cfg
@@ -1,2 +1,523 @@
 # Configuration file
 
+##########################################################################################################
+# blocks
+#--------------------------------------------------------------------------------------------------------#
+# Customise the physical properties and environmental effects of blocks
+##########################################################################################################
+
+blocks {
+
+    tile_blockStirlingGenerator_blockStirlingGenerator {
+        S:01.Name=EnderIO:blockStirlingGenerator
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_blockCombustionGenerator_blockCombustionGenerator {
+        S:01.Name=EnderIO:blockCombustionGenerator
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_blockZombieGenerator_blockZombieGenerator {
+        S:01.Name=EnderIO:blockZombieGenerator
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_blockSolarPanel_blockSolarPanel {
+        S:01.Name=EnderIO:blockSolarPanel
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_blockSagMill_blockSagMill {
+        S:01.Name=EnderIO:blockSagMill
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_blockAlloySmelter_blockAlloySmelter {
+        S:01.Name=EnderIO:blockAlloySmelter
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_blockCapBank_blockCapBank {
+        S:01.Name=EnderIO:blockCapBank
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_blockPainter_blockPainter {
+        S:01.Name=EnderIO:blockPainter
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_blockCrafter_blockCrafter {
+        S:01.Name=EnderIO:blockCrafter
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_blockVat_blockVat {
+        S:01.Name=EnderIO:blockVat
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_blockFarmStation_blockFarmStation {
+        S:01.Name=EnderIO:blockFarmStation
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_blockPowerMonitor_blockPowerMonitor {
+        S:01.Name=EnderIO:blockPowerMonitor
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_blockWirelessCharger_blockWirelessCharger {
+        S:01.Name=EnderIO:blockWirelessCharger
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_blockTank_blockTank {
+        S:01.Name=EnderIO:blockTank
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_blockVacuumChest_blockVacuumChest {
+        S:01.Name=EnderIO:blockVacuumChest
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_blockTransceiver_blockTransceiver {
+        S:01.Name=EnderIO:blockTransceiver
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_blockBuffer_blockBuffer {
+        S:01.Name=EnderIO:blockBuffer
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_blockInventoryPanel_blockInventoryPanel {
+        S:01.Name=EnderIO:blockInventoryPanel
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_blockEnderIo_blockEnderIo {
+        S:01.Name=EnderIO:blockEnderIo
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_blockTravelAnchor_blockTravelAnchor {
+        S:01.Name=EnderIO:blockTravelAnchor
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_blockTelePad_blockTelePad {
+        S:01.Name=EnderIO:blockTelePad
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_blockSoulBinder_blockSoulBinder {
+        S:01.Name=EnderIO:blockSoulBinder
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_blockPoweredSpawner_blockPoweredSpawner {
+        S:01.Name=EnderIO:blockPoweredSpawner
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_blockSliceAndSplice_blockSliceAndSplice {
+        S:01.Name=EnderIO:blockSliceAndSplice
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_blockKillerJoe_blockKillerJoe {
+        S:01.Name=EnderIO:blockKillerJoe
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_blockAttractor_blockAttractor {
+        S:01.Name=EnderIO:blockAttractor
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_blockSpawnGuard_blockSpawnGuard {
+        S:01.Name=EnderIO:blockSpawnGuard
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_blockExperienceObelisk_blockExperienceObelisk {
+        S:01.Name=EnderIO:blockExperienceObelisk
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_blockWeatherObelisk_blockWeatherObelisk {
+        S:01.Name=EnderIO:blockWeatherObelisk
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_blockInhibitorObelisk_blockInhibitorObelisk {
+        S:01.Name=EnderIO:blockInhibitorObelisk
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_blockEnchanter_blockEnchanter {
+        S:01.Name=EnderIO:blockEnchanter
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_blockElectricLight_blockElectricLight {
+        S:01.Name=EnderIO:blockElectricLight
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_blockFusedQuartz_blockFusedQuartz {
+        S:01.Name=EnderIO:blockFusedQuartz
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=average
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_blockReinforcedObsidian_blockReinforcedObsidian {
+        S:01.Name=EnderIO:blockReinforcedObsidian
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=strong
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+}
+
+
