--- a/config/enviromine/profiles/default/CustomProperties/EnhancedInventories.cfg
+++ b/config/enviromine/profiles/default/CustomProperties/EnhancedInventories.cfg
@@ -8,8 +8,8 @@
 
 blocks {
 
-    tile_sturdy_rail_sturdy_rail {
-        S:01.Name=catwalks:sturdy_rail
+    "tile_enhancedinventories:sortingImprovedChest_improvedSortingChest" {
+        S:01.Name=EnhancedInventories:improvedSortingChest
         I:02.MetaID=-1
         S:03.DropName=
         I:04.DropMetaID=-1
@@ -18,13 +18,13 @@ blocks {
         D:07.Temperature=0.0
         D:"08.Air Quality"=0.0
         D:09.Sanity=0.0
-        S:10.Stability=none
+        S:10.Stability=strong
         B:11.Slides=false
         B:"12.Slides When Wet"=false
     }
 
-    tile_sturdy_booster_rail_sturdy_rail_powered {
-        S:01.Name=catwalks:sturdy_rail_powered
+    "tile_enhancedinventories:sortingLocker_sortingLocker" {
+        S:01.Name=EnhancedInventories:sortingLocker
         I:02.MetaID=-1
         S:03.DropName=
         I:04.DropMetaID=-1
@@ -33,13 +33,13 @@ blocks {
         D:07.Temperature=0.0
         D:"08.Air Quality"=0.0
         D:09.Sanity=0.0
-        S:10.Stability=none
+        S:10.Stability=strong
         B:11.Slides=false
         B:"12.Slides When Wet"=false
     }
 
-    tile_sturdy_detector_rail_sturdy_rail_detector {
-        S:01.Name=catwalks:sturdy_rail_detector
+    "tile_enhancedinventories:sortingCabinet_sortingCabinet" {
+        S:01.Name=EnhancedInventories:sortingCabinet
         I:02.MetaID=-1
         S:03.DropName=
         I:04.DropMetaID=-1
@@ -48,13 +48,13 @@ blocks {
         D:07.Temperature=0.0
         D:"08.Air Quality"=0.0
         D:09.Sanity=0.0
-        S:10.Stability=none
+        S:10.Stability=strong
         B:11.Slides=false
         B:"12.Slides When Wet"=false
     }
 
-    tile_sturdy_activator_rail_sturdy_rail_activator {
-        S:01.Name=catwalks:sturdy_rail_activator
+    "tile_enhancedinventories:improvedChest_improvedChest" {
+        S:01.Name=EnhancedInventories:improvedChest
         I:02.MetaID=-1
         S:03.DropName=
         I:04.DropMetaID=-1
@@ -63,13 +63,13 @@ blocks {
         D:07.Temperature=0.0
         D:"08.Air Quality"=0.0
         D:09.Sanity=0.0
-        S:10.Stability=none
+        S:10.Stability=strong
         B:11.Slides=false
         B:"12.Slides When Wet"=false
     }
 
-    tile_support_column_support_column {
-        S:01.Name=catwalks:support_column
+    "tile_enhancedinventories:locker_locker" {
+        S:01.Name=EnhancedInventories:locker
         I:02.MetaID=-1
         S:03.DropName=
         I:04.DropMetaID=-1
@@ -78,13 +78,13 @@ blocks {
         D:07.Temperature=0.0
         D:"08.Air Quality"=0.0
         D:09.Sanity=0.0
-        S:10.Stability=none
+        S:10.Stability=strong
         B:11.Slides=false
         B:"12.Slides When Wet"=false
     }
 
-    tile_scaffold_scaffold {
-        S:01.Name=catwalks:scaffold
+    "tile_enhancedinventories:cabinet_blockCabinet" {
+        S:01.Name=EnhancedInventories:blockCabinet
         I:02.MetaID=-1
         S:03.DropName=
         I:04.DropMetaID=-1
@@ -93,13 +93,13 @@ blocks {
         D:07.Temperature=0.0
         D:"08.Air Quality"=0.0
         D:09.Sanity=0.0
-        S:10.Stability=none
+        S:10.Stability=strong
         B:11.Slides=false
         B:"12.Slides When Wet"=false
     }
 
-    tile_catwalk_catwalk_unlit {
-        S:01.Name=catwalks:catwalk_unlit
+    "tile_enhancedinventories:worktable_blockWorktable" {
+        S:01.Name=EnhancedInventories:blockWorktable
         I:02.MetaID=-1
         S:03.DropName=
         I:04.DropMetaID=-1
@@ -108,13 +108,13 @@ blocks {
         D:07.Temperature=0.0
         D:"08.Air Quality"=0.0
         D:09.Sanity=0.0
-        S:10.Stability=none
+        S:10.Stability=average
         B:11.Slides=false
         B:"12.Slides When Wet"=false
     }
 
-    tile_caged_ladder_cagedLadder_north_unlit {
-        S:01.Name=catwalks:cagedLadder_north_unlit
+    "tile_enhancedinventories:autoAssembler_blockAutoAssembler" {
+        S:01.Name=EnhancedInventories:blockAutoAssembler
         I:02.MetaID=-1
         S:03.DropName=
         I:04.DropMetaID=-1
@@ -123,7 +123,22 @@ blocks {
         D:07.Temperature=0.0
         D:"08.Air Quality"=0.0
         D:09.Sanity=0.0
-        S:10.Stability=none
+        S:10.Stability=average
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    "tile_enhancedinventories:painter_blockPainter" {
+        S:01.Name=EnhancedInventories:blockPainter
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=average
         B:11.Slides=false
         B:"12.Slides When Wet"=false
     }
