--- a/config/enviromine/profiles/default/CustomProperties/chisel.cfg
+++ b/config/enviromine/profiles/default/CustomProperties/chisel.cfg
@@ -1,2 +1,508 @@
 # Configuration file
 
+##########################################################################################################
+# blocks
+#--------------------------------------------------------------------------------------------------------#
+# Customise the physical properties and environmental effects of blocks
+##########################################################################################################
+
+blocks {
+
+    tile_chisel_aluminumblock_aluminumblock {
+        S:01.Name=chisel:aluminumblock
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=strong
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_chisel_aluminum_stairs_0_aluminum_stairs_0 {
+        S:01.Name=chisel:aluminum_stairs.0
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=strong
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_chisel_silverblock_silverblock {
+        S:01.Name=chisel:silverblock
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=strong
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_chisel_antiBlock_antiBlock {
+        S:01.Name=chisel:antiBlock
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=glowstone
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_chisel_concrete_concrete {
+        S:01.Name=chisel:concrete
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=strong
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_chisel_copperblock_copperblock {
+        S:01.Name=chisel:copperblock
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=strong
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_chisel_diamond_block_diamond_block {
+        S:01.Name=chisel:diamond_block
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=strong
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_chisel_steelblock_steelblock {
+        S:01.Name=chisel:steelblock
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=strong
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_chisel_end_Stone_end_Stone {
+        S:01.Name=chisel:end_Stone
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_chisel_factoryblock_factoryblock {
+        S:01.Name=chisel:factoryblock
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=strong
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_chisel_factoryblock2_factoryblock2 {
+        S:01.Name=chisel:factoryblock2
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=strong
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_chisel_futura_futura {
+        S:01.Name=chisel:futura
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=strong
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_chisel_dirt_dirt {
+        S:01.Name=chisel:dirt
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=loose
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_chisel_glowstone_glowstone {
+        S:01.Name=chisel:glowstone
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=glowstone
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_chisel_stonebricksmooth_stonebricksmooth {
+        S:01.Name=chisel:stonebricksmooth
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=strong
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_chisel_gold2_gold2 {
+        S:01.Name=chisel:gold2
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=strong
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_chisel_grimstone_grimstone {
+        S:01.Name=chisel:grimstone
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=strong
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_chisel_hexPlating_hexPlating {
+        S:01.Name=chisel:hexPlating
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=strong
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_chisel_hexLargePlating_hexLargePlating {
+        S:01.Name=chisel:hexLargePlating
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=strong
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_chisel_holystone_holystone {
+        S:01.Name=chisel:holystone
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=glowstone
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_chisel_laboratoryblock_laboratoryblock {
+        S:01.Name=chisel:laboratoryblock
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=strong
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_chisel_iron2_iron2 {
+        S:01.Name=chisel:iron2
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=strong
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_chisel_leadblock_leadblock {
+        S:01.Name=chisel:leadblock
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=strong
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_chisel_lapis_block_lapis_block {
+        S:01.Name=chisel:lapis_block
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=average
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_chisel_technical_technical {
+        S:01.Name=chisel:technical
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=strong
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_chisel_technical2_technical2 {
+        S:01.Name=chisel:technical2
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=strong
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_chisel_thaumium_thaumium {
+        S:01.Name=chisel:thaumium
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=strong
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_chisel_tinblock_tinblock {
+        S:01.Name=chisel:tinblock
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=strong
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_chisel_tyrian_tyrian {
+        S:01.Name=chisel:tyrian
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=strong
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_chisel_uraniumblock_uraniumblock {
+        S:01.Name=chisel:uraniumblock
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=strong
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_chisel_warningSign_warningSign {
+        S:01.Name=chisel:warningSign
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=strong
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_chisel_voidstone_voidstone {
+        S:01.Name=chisel:voidstone
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=glowstone
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+    tile_chisel_obsidian_obsidian {
+        S:01.Name=chisel:obsidian
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+}
+
+
