--- a/config/enviromine/profiles/default/CustomProperties/props.cfg
+++ b/config/enviromine/profiles/default/CustomProperties/props.cfg
@@ -1,2 +1,28 @@
 # Configuration file
 
+##########################################################################################################
+# blocks
+#--------------------------------------------------------------------------------------------------------#
+# Customise the physical properties and environmental effects of blocks
+##########################################################################################################
+
+blocks {
+
+    item_props_stuffed_creeper_props {
+        S:01.Name=props:props
+        I:02.MetaID=-1
+        S:03.DropName=
+        I:04.DropMetaID=-1
+        I:05.DropNumber=-1
+        B:"06.Enable Temperature"=false
+        D:07.Temperature=0.0
+        D:"08.Air Quality"=0.0
+        D:09.Sanity=0.0
+        S:10.Stability=none
+        B:11.Slides=false
+        B:"12.Slides When Wet"=false
+    }
+
+}
+
+
