--- a/config/enviromine/profiles/default/CustomProperties/EnhancedInventories.cfg
+++ b/config/enviromine/profiles/default/CustomProperties/EnhancedInventories.cfg
@@ -18,7 +18,7 @@ blocks {
         D:07.Temperature=0.0
         D:"08.Air Quality"=0.0
         D:09.Sanity=0.0
-        S:10.Stability=strong
+        S:10.Stability=none
         B:11.Slides=false
         B:"12.Slides When Wet"=false
     }
@@ -33,7 +33,7 @@ blocks {
         D:07.Temperature=0.0
         D:"08.Air Quality"=0.0
         D:09.Sanity=0.0
-        S:10.Stability=strong
+        S:10.Stability=none
         B:11.Slides=false
         B:"12.Slides When Wet"=false
     }
@@ -48,7 +48,7 @@ blocks {
         D:07.Temperature=0.0
         D:"08.Air Quality"=0.0
         D:09.Sanity=0.0
-        S:10.Stability=strong
+        S:10.Stability=none
         B:11.Slides=false
         B:"12.Slides When Wet"=false
     }
@@ -63,7 +63,7 @@ blocks {
         D:07.Temperature=0.0
         D:"08.Air Quality"=0.0
         D:09.Sanity=0.0
-        S:10.Stability=strong
+        S:10.Stability=none
         B:11.Slides=false
         B:"12.Slides When Wet"=false
     }
@@ -78,7 +78,7 @@ blocks {
         D:07.Temperature=0.0
         D:"08.Air Quality"=0.0
         D:09.Sanity=0.0
-        S:10.Stability=strong
+        S:10.Stability=none
         B:11.Slides=false
         B:"12.Slides When Wet"=false
     }
@@ -93,7 +93,7 @@ blocks {
         D:07.Temperature=0.0
         D:"08.Air Quality"=0.0
         D:09.Sanity=0.0
-        S:10.Stability=strong
+        S:10.Stability=none
         B:11.Slides=false
         B:"12.Slides When Wet"=false
     }
@@ -108,7 +108,7 @@ blocks {
         D:07.Temperature=0.0
         D:"08.Air Quality"=0.0
         D:09.Sanity=0.0
-        S:10.Stability=average
+        S:10.Stability=none
         B:11.Slides=false
         B:"12.Slides When Wet"=false
     }
@@ -123,7 +123,7 @@ blocks {
         D:07.Temperature=0.0
         D:"08.Air Quality"=0.0
         D:09.Sanity=0.0
-        S:10.Stability=average
+        S:10.Stability=none
         B:11.Slides=false
         B:"12.Slides When Wet"=false
     }
@@ -138,7 +138,7 @@ blocks {
         D:07.Temperature=0.0
         D:"08.Air Quality"=0.0
         D:09.Sanity=0.0
-        S:10.Stability=average
+        S:10.Stability=none
         B:11.Slides=false
         B:"12.Slides When Wet"=false
     }
